--- a/Dazzle/res/values/ids.xml
+++ b/Dazzle/res/values/ids.xml
@@ -8,13 +8,16 @@
 
     <!-- Control IDs. -->
 	<item name="dazzle_ringer" type="id" />
+	<item name="dazzle_otringer" type="id" />
 	<item name="dazzle_wifi" type="id" />
 	<item name="dazzle_bluetooth" type="id" />
 	<item name="dazzle_gps" type="id" />
 	<item name="dazzle_airplane" type="id" />
 	<item name="dazzle_sync" type="id" />
 	<item name="dazzle_brightness" type="id" />
+	<item name="dazzle_otbrightness" type="id" />
 	<item name="dazzle_brightauto" type="id" />
+	<item name="dazzle_otbrightauto" type="id" />
 	
 </resources>
 
