--- a/Dazzle/res/values/ids.xml
+++ b/Dazzle/res/values/ids.xml
@@ -9,6 +9,7 @@
     <!-- Control IDs. -->
 	<item name="dazzle_ringer" type="id" />
 	<item name="dazzle_otringer" type="id" />
+	<item name="dazzle_radio" type="id" />
 	<item name="dazzle_wifi" type="id" />
 	<item name="dazzle_bluetooth" type="id" />
 	<item name="dazzle_gps" type="id" />
