--- a/Dazzle/res/layout/preferences.xml
+++ b/Dazzle/res/layout/preferences.xml
@@ -87,6 +87,35 @@
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:orientation="horizontal" >
+		<CheckBox android:id="@id/dazzle_radio"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="top" />
+		<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical" >
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/prefs_enable_radio"
+					android:textSize="20sp" />
+			<TextView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/prefs_radio_summary" />
+		</LinearLayout>
+	</LinearLayout>
+	
+	<ImageView
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:src="@drawable/divider" />
+
+	<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal" >
 		<CheckBox android:id="@id/dazzle_wifi"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
