--- a/Plughole/res/xml/preferences.xml
+++ b/Plughole/res/xml/preferences.xml
@@ -2,7 +2,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="@string/prefs_general">
+    <PreferenceCategory android:title="@string/prefs_cat_general">
                            
         <ListPreference
                 android:key="soundMode"
@@ -10,16 +10,30 @@
                 android:summary="@string/prefs_sound_summary"
                 android:entries="@array/prefs_sound_entries"
                 android:entryValues="@array/prefs_sound_values"
-                android:dialogTitle="@string/prefs_sound_title" />
+                android:dialogTitle="@string/prefs_sound_title"
+                android:defaultValue="FULL" />
                         
         <CheckBoxPreference
                 android:key="vibeEnable"
                 android:title="@string/prefs_vibe"
-                android:summary="@string/prefs_vibe_summary" />
+                android:summaryOff="@string/prefs_vibe_summary_off"
+                android:summaryOn="@string/prefs_vibe_summary_on"
+                android:defaultValue="true" />
                 
     </PreferenceCategory>
+   
+    <PreferenceCategory android:title="@string/prefs_cat_display">
+
+        <CheckBoxPreference
+                android:key="keepAwake"
+                android:title="@string/prefs_wakelock"
+                android:summaryOff="@string/prefs_wakelock_summary_off"
+                android:summaryOn="@string/prefs_wakelock_summary_on"
+                android:defaultValue="false" />
+
+    </PreferenceCategory>
  
-    <PreferenceCategory android:title="@string/prefs_tilt">
+    <PreferenceCategory android:title="@string/prefs_cat_tilt">
                            
         <ListPreference
                 android:key="reclineMode"
@@ -27,21 +41,26 @@
                 android:summary="@string/prefs_recline_summary"
                 android:entries="@array/prefs_recline_entries"
                 android:entryValues="@array/prefs_recline_values"
-                android:dialogTitle="@string/prefs_recline_title" />
+                android:dialogTitle="@string/prefs_recline_title"
+                android:defaultValue="0" />
             
     </PreferenceCategory>
  
-    <PreferenceCategory android:title="@string/prefs_debug">
+    <PreferenceCategory android:title="@string/prefs_cat_debug">
                          
         <CheckBoxPreference
                 android:key="showPerf"
                 android:title="@string/prefs_perf"
-                android:summary="@string/prefs_perf_summary" />
+                android:summaryOff="@string/prefs_perf_summary_off"
+                android:summaryOn="@string/prefs_perf_summary_on"
+                android:defaultValue="true" />
                          
         <CheckBoxPreference
                 android:key="userLevels"
                 android:title="@string/prefs_ulevel"
-                android:summary="@string/prefs_ulevel_summary" />
+                android:summaryOff="@string/prefs_ulevel_summary_off"
+                android:summaryOn="@string/prefs_ulevel_summary_on"
+                android:defaultValue="true" />
             
     </PreferenceCategory>
     
