Scrambled Lite: phasing out full version.

--- a/Scrambled Net Lite/res/values/arrays.xml
+++ b/Scrambled Net Lite/res/values/arrays.xml
@@ -35,13 +35,7 @@ I guarantee it gets more challenging when some of the tiles are invisible!
 If it gets too hard, try the hints below.\n\
 \n\
 Use the menu to select different skill levels, pause the game, or start a new
-game.\n\
-\n\
-This is the free version of Scrambled Net.  The full version has personal
-best tracking, an autosolver, and other cool features.  If you would like
-to see the upgrade, you can follow this link:\n\
-\n\
-http://market.android.com/search?q=pname:org.hermit.netscramblefull</item>
+game.</item>
 
 <item>Scrambled Net can be played with the keyboard, the touchscreen,
 or a combination of both:</item>
