Scrambled Net: help on animation menu.

--- a/Scrambled Net Lite/res/values/arrays.xml
+++ b/Scrambled Net Lite/res/values/arrays.xml
@@ -93,6 +93,8 @@ the sound effects volume can always be adjusted in the game using the hardware
 volume keys.  If no sound is coming out, try turning up the volume using
 the buttons.\n\
 \n\
+• <b>Animation</b> lets you turn the \"network data\" animation on or off.\n\
+\n\
 • <b>Help</b> displays this help.\n\
 \n\
 • <b>About</b> displays version and license information.</item>
