--- a/Plughole/res/xml/level_1_1.xml
+++ b/Plughole/res/xml/level_1_1.xml
@@ -6,35 +6,72 @@
 
 		<!--  Generic border with entry at top-left and a clock area.
 			  Start in the entrance. -->
-		<Poly ref="ENTRY_TL_BORDER" />
-		<Anim type="clock" sx="1" sy="35" ex="23" ey="35.5" vertical="false" />
+<!--		<Poly ref="ENTRY_TL_BORDER" />-->
+<!--		<Anim type="clock" sx="1" sy="35" ex="23" ey="35.5" vertical="false" />-->
 		<Start x="2.5" y="0.2" />
+		
+		<Poly wall="true" draw="true" id="ENTRY_TL_BORDER">
+			<Point x="4" y="1" />
+			<Point x="4" y="-2" />
+			<Point x="5" y="-2" />
+			<Point x="5" y="0" />
+			<Point x="24" y="0" />
+			<Point x="24" y="36" />
+			<Point x="0" y="36" />
+			<Point x="0" y="-2" />
+			<Point x="3.9" y="-2" />
+			<Point x="3.9" y="-0.9" />
+			<Point x="1" y="-0.9" />
+			<Point x="1" y="34.5" />
+			<Point x="23" y="34.5" />
+			<Point x="23" y="1" />
+		</Poly>
 
-		<Anim type="green_arrow" sx="1" sy="0" ex="4" ey="3" />
+		<!--  Green arrow at the start. -->
+		<Rect sx="1" sy="0" ex="4" ey="3">
+			<Anim id="green_arrow" type="green_arrow" />
+		</Rect>
 
 		<!--  Top bar under the entrance.  The level name goes here. -->
-		<Rect sx="1.5" sy="4" ex="19" ey="7" />
-		<Display id="level" size="1.6" sx="1.5" sy="4" ex="19" ey="7" />
+		<Rect wall="true" draw="true" sx="1.5" sy="4" ex="19" ey="7">
+			<Text id="level" size="1.6" text="$$level" />
+		</Rect>
 
 		<!--  A couple of holes. -->
-		<Hole type="BLANK" x="11" y="12" />
-		<Hole type="LAVA" x="16" y="18" />
+		<Hole x="11" y="12">
+            <Graphic id="blank" img="@drawable/blank_hole" />
+		</Hole>
+		<Hole x="16" y="18">
+			<Anim id="top_lava" type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
 		<Target x="12" y="2.5" id="tele" />
-		<Hole type="PORT" x="3" y="21" target="tele" />
+		<Hole x="3" y="21">
+			<Anim id="tport" type="teleport_hole" />
+            <OnCross type="teleport" target="tele" />
+		</Hole>
 
 		<!--  Bottom bar above the exit. -->
-		<Rect sx="5" sy="28" ex="22.5" ey="29" />
+		<Rect wall="true" draw="true" sx="5" sy="28" ex="22.5" ey="29">
+		</Rect>
 		
 		<!--  A force field in the way of the exit. -->
-		<Graphic img="@drawable/electric" sx="9" sy="31.5" ex="12" ey="34.5" />
-		<ForceField id="field" sx="9" sy="31.5" ex="12" ey="34.5" />
+		<Rect id="field" wall="true" sx="9" sy="31.5" ex="12" ey="34.5">
+			<Anim id="force_field" type="force_field" />
+			<OnBounce type="speed" value="3" />
+		</Rect>
 		
 		<!--  A zone that activates and de-activates the force field. -->
-		<Graphic img="@drawable/pad" sx="11" sy="24" ex="13" ey="26" />
-		<Zone sx="11" sy="24" ex="13" ey="26" action="ONOFF" target="field" />
+		<Rect sx="11" sy="24" ex="13" ey="26">
+			<Graphic id="pad" img="@drawable/pad" />
+			<OnCross type="onoff" target="field" />
+		</Rect>
 
 		<!--  The exit. -->
-		<Hole type="EXIT" x="21.5" y="33" />
+		<Hole type="EXIT" x="21.5" y="33">
+			<Anim id="exit" type="exit_hole" />
+            <OnCross type="win" />
+		</Hole>
 
 	</Level>
 
