--- a/Plughole/res/xml/level_common.xml
+++ b/Plughole/res/xml/level_common.xml
@@ -6,7 +6,9 @@
 
 		<!-- A generic polygon making a border with an entrypoint
 			 at the top-left.  Use with a startpos of 2.5, 0.2. -->
-		<Poly wall="true" draw="true" id="ENTRY_TL_BORDER">
+		<Poly id="ENTRY_TL_BORDER">
+			<Wall />
+			<Draw />
 			<Point x="4" y="-2" />
 			<Point x="5" y="-2" />
 			<Point x="5" y="0" />
