--- a/Plughole/res/xml/level_1_3.xml
+++ b/Plughole/res/xml/level_1_3.xml
@@ -2,36 +2,60 @@
 
 <LevelData>
 
-	<Level name="@string/level2" group="1" difficulty="10" time="30">
+	<Level name="@string/level3" group="1" difficulty="10" time="30">
 
 		<!--  Generic border with entry at top-left and a clock area.
 			  Start in the entrance. -->
 		<Poly ref="ENTRY_TL_BORDER" />
-		<Anim type="clock" sx="1" sy="35" ex="23" ey="35.5" vertical="false" />
+<!--		<Anim type="clock" sx="1" sy="35" ex="23" ey="35.5" vertical="false" />-->
 		<Start x="2.5" y="0.2" />
 
-		<Anim type="green_arrow" sx="1" sy="0" ex="4" ey="3" />
+		<!--  Green arrow at the start. -->
+		<Rect sx="1" sy="0" ex="4" ey="3">
+			<Anim id="green_arrow" type="green_arrow" />
+		</Rect>
 
 		<!--  Top bar under the entrance.  The level name goes here. -->
-		<Rect sx="1.5" sy="6" ex="19" ey="9" />
-		<Display id="level" size="1.6" sx="1.5" sy="6" ex="19" ey="9" />
+		<Rect sx="1.5" sy="6" ex="19" ey="9">
+			<Wall />
+			<Draw />
+			<Text id="$level" size="1.6" />
+		</Rect>
 
 		<!--  Hole at the end of the top bar. -->
-		<Hole type="LAVA" x="21.5" y="3" />
+		<Hole x="21.5" y="3">
+			<Anim type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
 
 		<!--  Triangle to bounce them into two lava pits underneath. -->
 		<Poly>
+			<Wall />
+			<Draw />
 			<Point x="1.5" y="12" />
 			<Point x="10" y="14" />
 			<Point x="1.5" y="19" />
 		</Poly>
-		<Hole type="LAVA" x="15" y="19" />
-		<Hole type="LAVA" x="9" y="21" />
-		<!--  <Display text="Danger!" size="1.6" sx="5" sy="17" ex="13" ey="19" /> -->
-		<Graphic img="@drawable/danger" sx="10.5" sy="18.5" ex="13.5" ey="21.5" norotate="true" />
+		<Hole x="15" y="19">
+			<Anim type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
+		<Hole x="9" y="21">
+			<Anim type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
+		
+		<Rect sx="5" sy="17" ex="13" ey="19">
+			<Text text="Danger!" size="1.6" />
+		</Rect>
+		<Rect sx="10.5" sy="18.5" ex="13.5" ey="21.5">
+			<Graphic img="@drawable/danger" norotate="true" />
+		</Rect>
 
 		<!--  Test wedge.  -->
 		<Poly>
+			<Wall />
+			<Draw />
 			<Point x="20" y="21" />
 			<Point x="22.5" y="27.5" />
 			<Point x="19.5" y="27.5" />
@@ -39,12 +63,25 @@
 		</Poly>
 
 		<!--  Bottom bar guarding the exit. -->
-		<Rect sx="4" sy="28" ex="22.5" ey="29" />
+		<Rect sx="4" sy="28" ex="22.5" ey="29">
+			<Wall />
+			<Draw />
+		</Rect>
 
 		<!--  Two lava traps on the way in to the exit. -->
-		<Hole type="LAVA" x="6" y="30.5" />
-		<Hole type="LAVA" x="14" y="33" />
-		<Hole type="EXIT" x="21.5" y="33" />
+		<Hole x="6" y="30.5">
+			<Anim type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
+		<Hole x="14" y="33">
+			<Anim type="lava_hole" />
+            <OnCross type="lose" message="@string/message_lava" />
+		</Hole>
+		
+		<Hole x="21.5" y="33">
+			<Anim id="exit" type="exit_hole" />
+            <OnCross type="win" />
+		</Hole>
 
 	</Level>
 
