Dazzle: old style mobile data control (shortcut to system settings)

--- a/Dazzle/res/layout/dazzle_widget.xml
+++ b/Dazzle/res/layout/dazzle_widget.xml
@@ -47,6 +47,22 @@
 
 	</LinearLayout>
 
+    <LinearLayout android:id="@id/dazzle_radio_settings"
+            android:orientation="vertical"
+            android:layout_gravity="top|center_horizontal"
+            android:background="@drawable/appwidget_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/phone"
+                android:layout_gravity="center"/>
+
+    </LinearLayout>
+
 	<LinearLayout android:id="@id/dazzle_mobile_data"
 			android:orientation="vertical"
 			android:layout_gravity="top|center_horizontal"
@@ -118,7 +134,7 @@
 
         <ImageView android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/wifi"
+                android:src="@drawable/wifiap"
                 android:layout_gravity="center"/>
 
         <ImageView android:id="@+id/wifi_ap_ind"
